trying to run softmax